# cmvault

./: .env.example  .gitignore  GUIDE.md  README.md  drizzle.config.ts  ecosystem.config.js  package-lock.json  package.json
app/: layout.tsx
app/(auth)/sign-in/: page.tsx
app/actions/: admin.ts  api-tokens.ts  categories.ts  commands.ts  edit-command.ts  learned.ts
app/admin/: layout.tsx  page.tsx
app/admin/commands/: page.tsx
app/admin/users/: page.tsx
app/api/exchange-token/: route.ts
app/api/learn/: route.ts
app/api/suggest/: route.ts
app/command/[id]/: page.tsx
app/dashboard/: dashboard-client.tsx  layout.tsx  page.tsx
app/learned/: learned-client.tsx  page.tsx
app/settings/: page.tsx
autocompleter/: install.sh
backend/: Cargo.toml
backend/migrations/: 0001_init.sql  0002_auth.sql  0003_trigram_last_used.sql
backend/src/: auth.rs  errors.rs  main.rs  models.rs  routes.rs
components/: admin-sidebar.tsx  api-token-manager.tsx  app-sidebar.tsx  categories-manager.tsx  command-list.tsx  create-command-dialog.tsx  create-command-form.tsx  edit-command-dialog.tsx  tag-input.tsx
frontend/: package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.css
frontend/src/lib/: api.ts  types.ts
frontend/src/routes/: +page.svelte  +page.ts
frontend/src/routes/(app)/: +layout.svelte
frontend/src/routes/(app)/add-command/: +page.svelte
frontend/src/routes/auth/: +page.svelte
lib/: auth-client.ts  auth.ts  constants.ts  prisma.ts
lib/db/: schema.ts
prisma/: schema.prisma
(+2 files in other folders)
