[package]
name = "cmvault-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.12.1"
anyhow = "1.0.95"
argon2 = { version = "0.5.3", features = ["std"] }
chrono = { version = "0.4.43", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
log = "0.4"
rand = "0.8.5"
rand_core = "0.6.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
thiserror = "2.0.11"
tokio = { version = "1.49", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.20.0", features = ["serde", "v4"] }
